--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "react-router-dom": "^6.4.2",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   }
