--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "bootstrap-icons": "^1.9.1",
     "contentful": "^9.2.5",
     "daisyui": "^2.31.0",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-maps": "^9.4.5",
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
