--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
     "contentful": "^9.2.5",
     "daisyui": "^2.31.0",
